<resources>
    <string name="app_name">Farm</string>
    <string name="hello">Hello World, LoginActivity!</string>
    <string name="login_label_username">帐号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="login_username_hint">已有账号：由数字字母组成</string>
    <string name="login_register_link">新用户？ <a href="#" mce_href="#">注册</a></string>
    <string name="newmanifest">账户名:</string>
    <string name="newpassword">密码:</string>
    <string name="confirmpassword">确认密码:</string>
    <string name="manifest">注册</string>
</resources>
